2013-10-24  Markus Trippelsdorf  <markus@trippelsdorf.de>
	
	PR ipa/58712
	* cgraph.c (cgraph_create_edge_1): Add indirect_unknown_callee
	as argument.
	(cgraph_create_edge): Use the new argument.
	(cgraph_create_indirect_edge): Likewise.

2013-10-24  Joern Rennecke  <joern.rennecke@embecosm.com>

	* gcc/config/arc/arc.c (arc_ccfsm_post_advance): Also handle
	TYPE_UNCOND_BRANCH.
	(arc_ifcvt) <case 1 and 2>: Check that arc_ccfsm_post_advance
	changes statep->state.

2013-08-24  Tobias Burnus  <burnus@net-b.de>

	PR other/33426
	* tree-cfg.c (replace_loop_annotate): New function.
	(execute_build_cfg): Call it.
	* gimplify.c (gimple_boolify, gimplify_expr): Handle ANNOTATE_EXPR.
	* internal-fn.c (expand_ANNOTATE): New function.
	* internal-fn.def (ANNOTATE): Define as new internal function.
	* tree-core.h (tree_node_kind): Add annot_expr_ivdep_kind.
	* tree-pretty-print.c (dump_generic_node): Handle ANNOTATE_EXPR.
	* tree.def (ANNOTATE_EXPR): New DEFTREECODE.
	* doc/extend.texi (Pragmas): Document #pragma ivdep.
	* doc/generic.texi (Expressions): Document ANNOTATE_EXPR.

2013-10-17  Ian Bolton  <ian.bolton@arm.com>
	    Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/aarch64/aarch64.c (aarch64_preferred_reload_class):
	Special case reload SP+C into none GENERAL_REGS.

2013-10-24  Michael Matz  <matz@suse.de>

	* gengtype.c (is_file_equal): Check that files will be same
	length.

2013-10-25  Christian Bruel  <christian.bruel@st.com>

	* config.gcc (sh-*): Add sh-mem.o to extra_obj.
	* gcc/config/sh/t-sh (sh-mem.o): New rule.
	* gcc/config/sh/sh-mem.cc (expand_block_move): Moved here.
	(sh4_expand_cmpstr): New function.
	* gcc/config/sh/sh.c (force_into, expand_block_move): Move to sh-mem.c
	* gcc/config/sh/sh-protos.h (sh4_expand_cmpstr): Declare.
	* gcc/config/sh/sh.md (cmpstrsi, cmpstr_t): New patterns.
	(rotlhi3_8): Rename.

2013-10-24  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* configure.ac (ZW_PROG_COMPILER_DEPENDENCIES): Use CXX instead of CC.